[project]
name = "mitx-6-419x"
version = "0.1.0"
description = "MITx 6.419x coursework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "python-louvain>=0.16",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.0",
]
